[package]
name = "anchor-spl"
version = "0.24.2"
authors = ["Serum Foundation <foundation@projectserum.com>"]
rust-version = "1.56"
edition = "2021"
license = "Apache-2.0"
description = "CPI clients for SPL programs"

[features]
default = ["mint", "token", "associated_token"]
mint = []
token = ["safe-token"]
associated_token = ["safe-associated-token-account"]
governance = []
shmem = []
devnet = []
dex = ["serum_dex"]

[dependencies]
anchor-lang = { path = "../lang", features = ["derive"] }
serum_dex = { git = "https://github.com/project-serum/serum-dex", rev = "1be91f2", version = "0.4.0", features = ["no-entrypoint"], optional = true }
safecoin-program = "~1.8.12"
safe-token = { features = ["no-entrypoint"], optional = true }
safe-associated-token-account = { features = ["no-entrypoint"], optional = true }
